Fix broken tag page header layout on mobile
Fixes #38

--- a/assets/_scss/tags.scss
+++ b/assets/_scss/tags.scss
@@ -52,6 +52,8 @@
     margin-top: 1.5em;
 }
 
-.tags-list {
-    padding-left: 19rem;
+@media (min-width: 768px) {
+    .tags-list {
+        padding-left: 19rem;
+    }
 }
